--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,8 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <!--[if lte IE 9]>
@@ -25,6 +24,6 @@
       {{> body}}
     </main>
 
-    <script type="text/javascript" src="/js/index.js"></script>
+    <script type="text/javascript" src="/js/main.js" async></script>
   </body>
 </html>
